--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ body{
     color: lightgrey;
     
 }
+html{
+    scroll-behavior: smooth;
+}
+
 .container{
     position: relative;
     width: 100%;
@@ -348,10 +352,12 @@ header ul a{
 .my-projects{
     display: flex;
     flex-direction: column;
+    margin:auto;
     gap: 10%;
     align-items: center;
     position: relative;
-    width: 100%;
+    
+    width: 70%;
     height: 100vh;
    
     margin-top: 200px;
@@ -392,10 +398,11 @@ header ul a{
 .project-info{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     justify-content: center;
-    width: 50%;
+    width: 100%;
     padding-left: 10%;
+    margin: auto;
 
 }
 .project-info h1{
@@ -404,12 +411,12 @@ header ul a{
     text-wrap: nowrap;
     margin-bottom: 10px;
     margin-top: 0;
-    max-width: 450px;
+    max-width: 150px;
     text-align: center;
 }
 
 .project-info p{
-    width:830px;
+    width:330px;
     
     min-width: 300px;
     margin-bottom: 50px;
@@ -468,15 +475,211 @@ header ul a{
     left: 5%;
     max-width: 300px;
 }
+.coder{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    top: 25%;
+    right: 5%;
+    max-width: 300px;
+
+}
+.skills-box h1{
+    font-size: 50px;
+    display: flex;
+    align-items: center;
+}
+.skills-box p{
+    line-height: 23px;
+}
 
 
+.slider{
+    position: absolute;
+    bottom: 5%;
+    right: 20%;
+    overflow: hidden;
+    
+    width: 60%;
+    height: var(--height);
+    mask-image: linear-gradient(
+        to right,
+        transparent,
+        #000 10% 90%,
+        transparent
+    );
+    mix-blend-mode: difference;
+    opacity: 0.8;
+}
+
+.slider .list{
+    display:flex;
+    width: 100%;
+    min-width: calc(var(--width)* var(--quantity));
+    position: relative;
+}
+
+.slider .list .item{
+    width: var(--width);
+    height: var(--height);
+    position: relative;
+    left: 100%;
+    animation: autoRun 10s linear infinite;
+    transition: filter 0.5s;
+    animation-delay: calc(( 10s / var(--quantity) )* (var(--positon)-1)- 10s) !important;
+}
+.slider .list .item img{
+    width: 100%;
+}
+@keyframes autoRun{
+    from{
+        left: 100%;
+
+    } to{
+        left: calc(var(--width)*-1);
+    }
+}
+.slider:hover .item{
+    animation-play-state: paused!important;
+    filter:grayscale(1);
+}
+.slider .item:hover{
+    filter:grayscale(0);
+}
 
 
+/* contact-section */
+
+.contact-section{
+    width: 50%;
+   margin: auto;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    gap: 10%;
+    align-items: center;
+    position: relative;
+}
+.contact-section h1{
+    position: absolute;
+    top: 10%;
+    left: 40%;
+}
+.social-box{
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+.social-box a{
+    text-wrap: nowrap;
+    color: lightgray;
+    text-decoration: none;
+    font-size: 20px;
+    
+}
+/* .social-box i{
+    color: #727fde;
+    font-size: 30px;
+    margin-right: 10px;
+} */
+.social-box a i{
+    color: #727fde;
+    margin-top: 0px;
+    font-size: 30px;
+    margin-right:10px ; 
+  
+
+}
+.social-box p{
+    max-width: 400px;
+    margin-top: 30px;
+    margin-bottom: 5px;
+}
+.contact-box input{
+    padding: 7.5px 30px;
+    background-color: lightgray;
+    width: 80%;
+    height: 25px;
+    border: none;
+    outline: none;
+    border-top-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+.contact-box button{
+    margin-top: 30px;
+    color: white;
+    padding: 5px 15px;
+    border-radius: 10px;
+    border: 1px solid #727fdeb4;
+    background-color: #2200493d;
+    box-shadow: 0 0 5px #727fde86;
+    cursor: pointer;
+    transition: 0.3s;
+}
+.contact-box button:hover{
+    box-shadow:0 0 15px #727fde86 ;
+    opacity: 0.7;
+}
+footer{
+    display: flex;
+    position: relative;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    align-items: center;
+    justify-content: center;
+    height: 70px;
+    background-color: rgba(255, 255, 255, 0.128);
+    backdrop-filter: blur(10px);
+    box-shadow: 0 0 15px rgb(255, 255, 255, 0.356);
+    z-index: 999;
+}
+footer h1{
+    font-size: 20px;
+}
 
 
+/*  blur effect */
+.autoBlur{
+    animation: autoBlurAnimation linear both;
+    animation-timeline:view() ;
+}
 
+@keyframes autoBlurAnimation{
+    0%{
+        filter: blur(30px);
+        opacity: 0;
+    }
+    35%,65%{
+        filter: blur(0);
+        opacity: 1;
+    }
+    100%{
+        filter: blur(30px);
+        opacity: 0;
+    }
+}
 
+/* auto display animation */
+.autoDisplay{
+    animation: autoDisplayAnimation both;
+    animation-timeline: view();
+}
 
+@keyframes autoDisplayAnimaion {
+    from {
+        filter: blur(10px);
+        transform: translateY(-200px);
+        opacity: 0.2;
+    }
+    50%{
+        opacity: 1;
+        filter: blur();
+        transform: translateX(0) scale(1);
+    }
+    
+}
 
 
 
