--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
 }
 html{
     scroll-behavior: smooth;
+    
 }
 
 .container{
@@ -232,7 +233,7 @@ header ul a{
     flex-direction: column;
     align-items: center;
     width: 80%;
-    margin-top: 60vh;
+    margin-top: 40vh;
     
 }
 
@@ -667,21 +668,42 @@ footer h1{
     animation-timeline: view();
 }
 
-@keyframes autoDisplayAnimaion {
+@keyframes autoDisplayAnimation {
     from {
         filter: blur(10px);
-        transform: translateY(-200px);
+        transform: translateY(-200px) scale(0);
         opacity: 0.2;
     }
     50%{
         opacity: 1;
-        filter: blur();
+        filter: blur(0);
         transform: translateX(0) scale(1);
     }
     
 }
 
+/* fade in right */
 
+.fadeInRight{
+    animation: fadeInAnimation both;
+    animation-timeline: view();
+}
+@keyframes fadeInAnimation {
+    0%{
+        opacity: 0;
+        transform: translateX(-500px) scale(0.2);
+        filter: blur(20px);
+    }
+    35%,65%{
+        opacity: 1;
+        transform: translateX(0px) scale(1);
+        filter: blur(0);
+    }
+    100%{
+        filter: blur(20px);
+    }
+    
+}
 
 
 
@@ -700,4 +722,123 @@ footer h1{
         height: auto;
     }
 }
+
+
+/* mid laptop */
+@media screen and (max-width:1024){
+    .hero-info h1{
+        font-size: 6px;
+        max-width: 80%;
+        line-height: 40px;
+    }
+    .hero-info p{
+       max-width: 300px;
+
+    }
+    .hero-vid-box
+    {
+       right: 0px;
+    }
+    .hero-vid-box video{
+        height: 500px;
+    }
     
+}
+
+/* tablet view */
+
+@media screen and (max-width:768px) {
+    .blackhole-box video{
+        margin-top: -200px;
+
+    }
+    .hero-info h1{
+        font-size: 40px;
+        max-width: 400px;
+        line-height: 40px;
+    }
+    .hero-info p{
+       max-width: 300px;
+
+    }
+    .hero-vid-box
+    {
+       right: 0px;
+    }
+    .hero-vid-box video{
+        height: 500px;
+    }
+    .section-tilte{
+        font-size: 30px;
+    }
+    .info-cards{
+        grid-template-columns: auto;
+
+    }
+    .card:nth-child(3){
+        grid-column: span 2;
+        height: 70vh;
+    }
+    .info-cards .card h1{
+        font-size: 20px;
+    }
+    .card:nth-child(3) h1{
+        bottom: 25%;
+    }
+    .card video{
+        height: 75%;
+        margin-top: 0%;
+    }
+    .my-projects{
+        margin-bottom: 500px;
+    }
+    .project-vidbox video{
+        width: 250px;
+        margin-left: -100px;
+
+    }
+    .project-info{
+        padding-top: 0;
+        margin-left: -50px;
+
+    }
+    .project-info h1{
+        font-size: 20px;
+        max-width: 200px;
+        text-wrap: wrap;
+    }
+    .project-info p{
+        font-size: 12px;
+        text-wrap: wrap;
+        max-width:200px ;
+        min-width: 0;
+    }
+    .skills-box img{
+        margin-top: -20px;
+    }
+    .skills-box .slider{
+        margin-top: -120px;
+    }
+    .contact-section{
+        width: 80%;
+    }
+    .contact-box{
+        margin-top: 40px;
+    }
+    .social-box{
+        margin-top: -40px;
+    }
+    footer{
+        font-size: 20px;
+    }
+
+    
+}
+
+
+
+
+
+
+
+
