--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ header ul{
     display: flex;
     justify-content: space-between;
     padding:15px 15px ;
+    margin: auto;
     width: 30%;
     border-radius: 50px;
     background-color: rgba(0,0,69,0.30);
@@ -72,6 +73,10 @@ header ul a{
      color: white;
      font-size: 700;
      margin: 0 10px;
+}
+
+.menu-toggle{
+    display: none;
 }
 .box-icons{
     display: flex;
@@ -624,6 +629,7 @@ header ul a{
 }
 footer{
     display: flex;
+    
     position: relative;
     bottom: 0;
     right: 0;
@@ -742,12 +748,443 @@ footer h1{
     .hero-vid-box video{
         height: 500px;
     }
+
+    .menu-toggle {
+        font-size: 24px;
+        color: white;
+        display: none;
+        cursor: pointer;
+    }
     
 }
 
-/* tablet view */
 
-@media screen and (max-width:768px) {
+
+/* mobile */
+@media screen and (max-width: 700px){
+    .autoBlur{
+        animation: none;
+
+    }
+    header{
+        position: fixed;
+        height: 50px;
+    }
+    header ul{
+        display:none;
+
+    }
+    header .nav-links{
+        display: none;
+    }
+    header .box-icons{
+        display:none;
+    }
+    header h1{
+        font-size: 25px;
+    }
+    .blackhole-box video{
+        margin-top: -16%;
+
+    }
+    
+    .hero {
+        flex-direction: column;
+
+    }
+    .autoBlur{
+        animation: none;
+
+    }
+    .hero-info{
+        bottom: 5%;
+    }
+    .scroll-down{
+        bottom: 5%;
+    }
+    .hero-info h1{
+        font-size: 30px;
+        max-width: 300px;
+        line-height: 40px;
+        
+    }
+
+    .hero-vid-box{
+      
+        top: 5%;
+        right: 5%;
+    }
+    .autoBlur{
+        animation: none;
+        height: 20px;
+        width: 50px;
+
+    }
+    .my-projects{
+        margin-bottom:600px;
+       
+    }
+     .my-projects .section-tilte{
+        margin-top:px;
+     }
+    .project-vidbox{
+        margin-left:0;
+
+    }
+    .project-vidbox video{
+        width: 80%;
+    }
+    
+    .project-card{
+        flex-direction: column;
+        margin-left: 5%;
+        gap: 30px;
+        margin-top:40%;
+    }
+    .project-info{
+        width: 85%;
+        margin-left: -35%;
+        margin-top: 50%;
+
+    }
+    .project-info h1{
+        text-wrap: nowrap;
+    }
+    .project-info p{
+        max-width:70%;
+    }
+
+
+
+    /* skils */
+    .my-projects{
+        margin-bottom:1400px;
+    }
+    .designer{
+        top: 22%;
+        left: 15%;
+    }
+    .coder{
+        top: 50%;
+        left:15%;
+    }
+    .skills-section{
+        margin-top:60%;
+        height: auto;
+        
+    }
+    .autoBlur{
+        animation: none;
+    }
+    .skills-box{
+        /* flex-direction: column; */
+        width: 100%;
+    }
+    .skills-box h1{
+        margin-bottom: 0;
+        margin-top: 10px;
+
+    }
+    .designer{
+        margin-top: 70px;
+    
+    }
+    .designer h1{
+        /* margin-left: -18%; */
+        text-align: left;
+        margin-left: -15%;
+    }
+    .coder{
+        margin-top: 100px;
+    }
+    .coder h1{
+        text-align: left;
+        margin-top: 20px;
+    }
+   
+    .autoBlur{
+        animation: none;
+    }
+    .skills-image{
+        margin-top: 40px;
+    }
+    .slider{
+        bottom: 0;
+        margin-top: 30%;
+    
+    }
+    .skills-box .slider{
+        margin-top: px;
+    }
+   
+    .slider img{
+        width: 60%;
+       
+    }
+    .autoBlur{
+        animation: none;
+    }
+    .contact-section{
+        flex-direction: column;
+        width: 80%;
+        margin-top: 220px;
+        margin-bottom: 50px;
+    }
+    .contact-section .section-tilte{
+        top: -100px;
+        left: 15%;
+    }
+
+    /* header{
+        width:87%;
+        justify-content: space-between;
+        gap: 90px;
+    
+    }
+    .container{
+        width: 100%;
+        overflow: hidden;
+    }
+
+    .hero{
+        display: block;
+    }
+    .hero-vid-box{
+        display: none;
+    }
+   
+        .back-vid {
+            width: auto;
+            height: 100%; /* Adjust height as needed */
+            
+        /* }
+    
+    .blackhole-box{ */
+        /* top: 50px;
+        left: 50px; ;
+        margin: auto; */
+        /* display: none;
+    }
+
+    header ul{
+        padding:10px 10px;
+        visibility: hidden;
+    }
+
+    .nav-links {
+        list-style: none;
+        display: flex;
+        gap: 20px;
+    }
+    
+    .nav-links li a {
+        color: white;
+        text-decoration: none;
+    }
+    .menu-toggle{
+      display: block; 
+      margin-left: 70px; 
+      
+    }
+    .menu-toggle i{
+        width: 40px;
+        height: auto;
+    }
+
+    .nav-links {
+        display:none ; /* Hide nav links initially */
+        /* flex-direction: column;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        width: 100%;
+        background: #444;
+        text-align: center;
+        padding: 10px 0;
+    }
+    .box-icons{
+        overflow-x: hidden;
+    }
+
+    .nav-links.active {
+        display: none; 
+    }
+
+    .hero-info p{
+        max-width: 50%;
+    }
+    .hero-vid-box{
+        right: 0px;
+     }
+     .hero-vid-box video{
+         height: 40%;
+     }
+    .menu-toggle {
+        display: block; 
+        margin-right: 10px;
+    }
+    .my-projects{
+        width: 100%;
+        overflow: hidden;
+        border: 2px solid red;
+    }
+    .project-card{
+        display: block;
+    }
+    .project-vidbox{
+        width: 80%;
+        align-items: center;
+        justify-content: center;
+        width: 80%;
+        position: relative;
+        cursor: pointer;
+        min-width:200px;
+        transition: 0.5s;
+        mix-blend-mode: exclusion;
+    }
+    .project-info{
+        width: 80%;
+    }
+    .contact-section{
+        width: 100%;
+        display: block;
+    }
+    footer {
+      width: 100%;
+      border: 2px solid red;
+    } */
+} 
+
+
+/* tablet view */
+@media screen and (min-width: 720px){
+    header ul{
+        display: flex;
+        justify-content: space-between;
+        padding:15px 15px ;
+        width: 30%;
+        border-radius: 50px;
+        background-color: rgba(0,0,69,0.30);
+        backdrop-filter: blur(10px);
+        box-shadow: 0 0 10px  #727fde;
+    }
+    header h1{
+        font-size: medium;
+    }
+    
+    header ul li{
+        list-style: none;
+    }
+  
+    header ul a{
+         text-decoration: none;
+         color: white;
+         font-size: 14px;
+         margin:auto;
+
+    }
+    .box-icons{
+        display: flex;
+        gap: 20px;
+        
+    }
+    .box-icons a{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 20px;
+        width: 30px;
+        height: 30px;
+        border: 2px solid #727fde;
+        text-decoration: none;
+        color: lightgray;
+        transition: 0.3s;
+        border-radius: 50%;
+    }
+
+    .hero-info h1{
+        font-size: 30px;
+        max-width: 300px;
+        line-height: 40px;
+    }
+    .hero-info p{
+        max-width: 300px;
+    }
+    .hero-vid-box{
+        right: 0px;
+     }
+     .hero-vid-box video{
+         height: 400px;
+     }
+     
+     .info-cards{
+        grid-template-columns: auto;
+
+    }
+    .card{
+        height: 28vh;
+    }
+    .card:nth-child(3){
+        grid-column: span 2;
+        height: 70vh;
+    }
+    .info-cards .card h1{
+        font-size: 20px;
+    }
+    .card:nth-child(3) h1{
+        bottom: 25%;
+    }
+
+    .project-vidbox video{
+        width: 250px;
+        margin-left: 64px;
+        border: 2px solid red;
+       
+
+    }
+    .my-projects .section-tilte{
+        margin: auto;
+    }
+    .project-info h1{
+        font-size: 20px;
+    }
+    .project-info{
+        padding-top: 0;
+        margin-left: -40px;;
+
+    }
+    .project-info p{
+        
+       
+        max-width:300px ;
+       
+    }
+    .skills-box img{
+        margin-top: -20px;
+    }
+    .skills-box{
+        width: 100%;
+    }
+    .skills-box .slider{
+        margin-top: -120px;
+    }
+
+    .contact-section{
+        width: 80%;
+    }
+    .contact-box{
+        margin-top: 40px;
+    }
+    
+    .social-box{
+        margin-top: -40px;
+    }
+
+
+
+}
+
+@media screen and (min-width: 800px) and (max-width:1000px) {
     .blackhole-box video{
         margin-top: -200px;
 
@@ -761,8 +1198,7 @@ footer h1{
        max-width: 300px;
 
     }
-    .hero-vid-box
-    {
+    .hero-vid-box{
        right: 0px;
     }
     .hero-vid-box video{
@@ -773,7 +1209,11 @@ footer h1{
     }
     .info-cards{
         grid-template-columns: auto;
+        
 
+    }
+    .card{
+        height:25vh;
     }
     .card:nth-child(3){
         grid-column: span 2;
